Correct handling for post editing on mobile

--- a/static/style/main.scss
+++ b/static/style/main.scss
@@ -396,6 +396,19 @@ article {
   }
 }
 
+#article-edit-submit {
+  font-size: 1em;
+  margin-top: 0.75em;
+
+  @include desktop { display: none }
+}
+
+.article-editable {
+  &:focus {
+    outline-color: #888;
+  }
+}
+
 ///////////
 // Reply //
 ///////////
